# SudokuSolverCPP

./: CMakeLists.txt  main.cpp
hdr/: Sudoku.h  SudokuField.h  SudokuFieldGroup.h
hdr/algorithm/: SolvingOperation.h  SudokuFieldIterator.h  SudokuFieldSorter.h
src/: Sudoku.cpp  SudokuField.cpp  SudokuFieldGroup.cpp
src/algorithm/: SolvingOperation.cpp  SudokuFieldIterator.cpp  SudokuFieldSorter.cpp
